--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@neynar/nodejs-sdk": "^1.21.1",
     "@solana/web3.js": "^1.98.0",
+    "@supabase/supabase-js": "^2.78.0",
     "bs58": "^6.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
