--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,16 @@
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "/api/$1"
+            "src": "/api/state",
+            "dest": "/api/state.js"
+        },
+        {
+            "src": "/api/agent",
+            "dest": "/api/agent.js"
+        },
+        {
+            "src": "/api/trending/(.*)",
+            "dest": "/api/trending.js?chainId=$1"
         },
         {
             "src": "/(.*)",
